Agent query: Could you please check if the admin reports page is now working correctly? Try accessing the reports and analytics section to verify if all the data is displayed properly without any JavaScript errors.
Fix: Correct ID type display in admin reports

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/832f2abc-4378-444e-b826-5fcb9ec6f866/dac4268b-480a-4433-a818-7c79202dc059.jpg

--- a/templates/admin/reports.html
+++ b/templates/admin/reports.html
@@ -318,7 +318,9 @@ async function updateReports() {
                 <td>
                     ${vehicle.driver_info.name}<br>
                     <small class="text-muted">
-                        ${vehicle.driver_info.id_type.replace('_', ' ').title()}: ${vehicle.driver_info.id_number}<br>
+                        ${vehicle.driver_info.id_type.split('_').map(word => 
+                            word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()
+                        ).join(' ')}: ${vehicle.driver_info.id_number}<br>
                         Phone: ${vehicle.driver_info.phone}<br>
                         Address: ${vehicle.driver_info.residence}
                     </small>
